Added dependency injection for db context

--- a/Restaurants.API/appsettings.Development.json
+++ b/Restaurants.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RestaurantsDb": "Server=localhost,1433;Database=RestaurantsDb;User Id=sa;Password=MohitDocker@123;TrustServerCertificate=True;"
   }
 }
