--- a/Restaurants.API/Restaurants.API.csproj
+++ b/Restaurants.API/Restaurants.API.csproj
@@ -12,6 +12,14 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Restaurants.Application\Restaurants.Application.csproj" />
+      <ProjectReference Include="..\Restaurants.Infrastructure\Restaurants.Infrastructure.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
