--- a/Restaurants.Application/Restaurants.Application.csproj
+++ b/Restaurants.Application/Restaurants.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Restaurants.Domain\Restaurants.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
