--- a/Restaurants.API/appsettings.Development.json
+++ b/Restaurants.API/appsettings.Development.json
@@ -1,11 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "RestaurantsDb": "Server=localhost,1433;Database=RestaurantsDb;User Id=sa;Password=MohitDocker@123;TrustServerCertificate=True;"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp: dd-MM HH:mm:ss} {Level:u3}] |{SourceContext}| {Newline}{Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Restaurant-API-.log",
+          "rollingInterval": "Day",
+          "rollOnfileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ]
   }
 }
