--- a/Restaurants.API/appsettings.Development.json
+++ b/Restaurants.API/appsettings.Development.json
@@ -13,7 +13,7 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp: dd-MM HH:mm:ss} {Level:u3}] |{SourceContext}| {Newline}{Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:dd-MM HH:mm:ss} {Level:u3}] |{SourceContext}| {NewLine}{Message:lj}{NewLine}{Exception}"
         }
       },
       {
@@ -21,7 +21,7 @@
         "Args": {
           "path": "Logs/Restaurant-API-.log",
           "rollingInterval": "Day",
-          "rollOnfileSizeLimit": true,
+          "rollOnFileSizeLimit": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
