--- a/Restaurants.API/Restaurants.API.csproj
+++ b/Restaurants.API/Restaurants.API.csproj
@@ -4,23 +4,21 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>RestaurantsAPI</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <ProjectReference Include="..\Restaurants.Application\Restaurants.Application.csproj" />
+        <ProjectReference Include="..\Restaurants.Infrastructure\Restaurants.Infrastructure.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Restaurants.Application\Restaurants.Application.csproj" />
-      <ProjectReference Include="..\Restaurants.Infrastructure\Restaurants.Infrastructure.csproj" />
-    </ItemGroup>
-    
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
     </ItemGroup>
 
 </Project>
